--- a/packages_playbook.yaml
+++ b/packages_playbook.yaml
@@ -13,6 +13,8 @@
           - wget
           - htop
           - bat
+          - jq
+          - net-tools
           - build-essential
           - python3-pip
           - python3-venv
