--- a/hosts.example
+++ b/hosts.example
@@ -2,4 +2,4 @@
 server1 ansible_host=SERVER_IP ansible_port=22 ansible_ssh_private_key_file=~/.ssh/SSH_KEY_NAME
 
 [ubuntu:vars]
-ansible_user=www
+ansible_user=admin
